# OOP

./: .gitignore  README.md
Chat/: README.md
Chat-GUI v.2/: README.txt
SkipList/: CMakeLists.txt  README.md  main.cpp  skiplist.h  skipnode.h
agario/: CMakeLists.txt  README.md
agario/includes/: board.h  bot.h  cell.h  config_values.h  game.h  manual.h  menu.h  player.h  real_player.h  settings.h  unit.h
agario/src/: board.cpp  bot.cpp  cell.cpp  game.cpp  main.cpp  manual.cpp  menu.cpp  player.cpp  real_player.cpp  settings.cpp  unit.cpp
agario/test/: CMakeLists.txt  test.cpp
bloom_filter/: CMakeLists.txt  README.md  base_filter.h  bloom_filter.h  null_filter.h  refac.c  refac.h  test.cpp
blur_image/: CMakeLists.txt  app.cpp  app.h  blur_image.cpp  blur_image.h  blur_info.cpp  blur_info.h  gui.cpp  gui.h
bmp_modificate/: BitmapPlusPlus.hpp  README.md  exceptions_bmp.h  main.cpp  test.cpp  transform.cpp  transform.h
calendar/: README.md  calendar.cpp  calendar.h  main.cpp  run.cpp  run.h  test.cpp  test.txt
chess/: README.md  bishop.c  bishop.h  board.c  board.h  diag_horiz.c  diag_horiz.h  king.c  king.h  knight.c  knight.h  main.c  new.c  new.h  piece.c  piece.h  queen.c  queen.h  queue.c  queue.h  rook.c  rook.h  run.c  run.h  test.txt
cpp_experiments/: CMakeLists.txt  main.cpp
ex_sort/: README.md  external_sort.cpp  external_sort.h  test.cpp
graph_traversial/: CMakeLists.txt  README.md  bfs.cpp  bfs.h  check_cyclic.cpp  check_cyclic.h  dfs.cpp  dfs.h  find_path.cpp  find_path.h  find_path_edge.cpp  find_path_edge.h  find_path_vertex.cpp  find_path_vertex.h  founder.cpp  founder.h  graph.h  main.cpp  strategy.cpp  strategy.h  temp  test.cpp  traverser.cpp  traverser.h
graph_traversial/test/: CMakeLists.txt
histogram/: HistogramPlusPlus.cpp  HistogramPlusPlus.h  README.md  main.cpp  test.cpp
mandelbrot_set/: CMakeLists.txt  main.cpp
matrix/: README.md  main.cpp  matrix.cpp  matrix.hpp  matrix.test.cpp  tests.h
merge_sort/: CMakeLists.txt  README.md  main.cpp  msort.h
multithread_matrix/: CMakeLists.txt  README.md  calculator_manager.cpp  calculator_manager.h  main.cpp  matrix.cpp  matrix.h  results.txt  test.cpp
my_shared_ptr/: CMakeLists.txt  README.md  counter.h  main.cpp  shared_ptr.h
slist/: README.md  slist.c  slist.h
sum_all/: CMakeLists.txt  README.md  main.cpp  sum_all.h  sum_all_traits.h
text_editor/: CMakeLists.txt  README.md  buffer.cpp  buffer.h  command_creator.cpp  command_creator.h  command_dto.cpp  command_dto.h  commands_enum.h  copy.cpp  copy.h  delete.cpp  delete.h  editor.cpp  editor.h  editor_command.h  editor_manager.cpp  editor_manager.h  insert.cpp  insert.h  main.cpp  parser.cpp  parser.h  paste.cpp  paste.h  redo.cpp  redo.h  service_command.h  test.cpp  text_document.cpp  text_document.h  undo.cpp  undo.h
text_editor/test/: CMakeLists.txt  test.cpp
who_where_was/: README.md  data.cpp  main.cpp  token.cpp  user1.txt  (+1 more)
(+47 files in other folders)
